--- a/modules/ROOT/pages/prerequisites/prerequisites.adoc
+++ b/modules/ROOT/pages/prerequisites/prerequisites.adoc
@@ -235,10 +235,10 @@ For _best performance_, _stability_, _support_, and _full functionality_ we offi
 
 * Debian 10 and 11
 * Fedora 32 and 33
-* Red Hat Enterprise Linux/Centos 7.5 and 8
+* Red Hat Enterprise Linux 7.5 and 8 including all 100% compatible derivatives
 * SUSE Linux Enterprise Server 12 with SP4/5 and SLES 15
 * openSUSE Leap 15.2 and 15.3
-* Ubuntu 20.04
+* Ubuntu 20.04 and 22.04
 
 == Additional Software
 
