Improving the docker-compose installation

--- a/modules/ROOT/pages/deployment/container/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration.adoc
@@ -2,6 +2,7 @@
 :toc: right
 
 :docker-compose-url: https://docs.docker.com/get-started/08_using_compose/
+:docker-compose-install-url: https://docs.docker.com/compose/install/
 :docker-hub-url: https://hub.docker.com/r/owncloud/ocis/tags?page=1&ordering=last_updated
 :compose-examples-url: https://github.com/owncloud/ocis/tree/master/deployments/examples
 :docker-swarm-url: https://docs.docker.com/engine/reference/commandline/swarm/
@@ -52,9 +53,23 @@ Check if the package docker-compose is installed (in addition to docker):
 which docker-compose
 ----
 
-If Docker-Compose is installed, you'll be informed. If not, you may get no output at all or a message that it couldn't be found. In that case you need to install Docker-Compose first. On most Linux distributions, you can simply use the package manager to do so.
+If Docker-Compose is installed, you'll be informed. If not, you may get no output at all or a message that it couldn't be found. In that case you need to install Docker-Compose first. On most Linux distributions, you can simply use the package manager to do so. Note that in many cases, this will install a 1.x version (python based) while a 2.x version (go based) is preferred. To check which version would be installed with the package manager, simply type:
 
-Create a project directory, like `ocis-compose` in your home directory to have a common location for your Infinite Scale compose files.
+[source,bash]
+----
+apt-cache policy docker-compose
+----
+
+If the output shows a version like 2.x you can use the packag manager to install docker-compose like:
+
+[source,bash]
+----
+sudo apt install docker-compose
+----
+
+If the output shows a version like 1.25.0-1, follow the {docker-compose-install-url}[Install Docker Compose] guide to install a 2.x version.
+
+When done, create a project directory, like `ocis-compose` in your home directory to have a common location for your Infinite Scale compose files.
 
 == Kubernetes and Helm Charts
 
