Adding Port Ranges to extensions

--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -12,6 +12,7 @@
 *** xref:deployment/security/security.adoc[Securing oCIS]
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:deployment/extensions/extensions.adoc[Extensions]
+**** xref:deployment/extensions/app-registry.adoc[App Registry]
 **** xref:deployment/extensions/app-provider.adoc[App Provider]
 **** xref:deployment/extensions/audit.adoc[Audit]
 **** xref:deployment/extensions/auth-basic.adoc[Auth Basic]
@@ -23,6 +24,7 @@
 **** xref:deployment/extensions/graph.adoc[Graph]
 **** xref:deployment/extensions/groups.adoc[Groups]
 **** xref:deployment/extensions/idm.adoc[IDM]
+**** xref:deployment/extensions/idp.adoc[IDP]
 **** xref:deployment/extensions/nats.adoc[NATS]
 **** xref:deployment/extensions/notifications.adoc[Notification]
 **** xref:deployment/extensions/ocdav.adoc[OCDAV]
