--- a/modules/ROOT/pages/deployment/container/container-setup.adoc
+++ b/modules/ROOT/pages/deployment/container/container-setup.adoc
@@ -238,7 +238,7 @@ If you get an error message like the following:
 Could not create config: config in /etc/ocis/ocis-config/ocis.yaml already exists
 ----
 
-you already have created a configuration once. As you cannot overwrite the existing configuration, you must delete the old configuration first to proceed. For more details see: xref:deployment/general/general-info.adoc#initialize-infinite-scale[Initialize Infinite Scale]
+you already have created a configuration once. As you cannot overwrite the existing configuration, you must delete the old configuration first to proceed. For more details, see: xref:deployment/general/general-info.adoc#initialize-infinite-scale[Initialize Infinite Scale].
 ====
 
 === Recurring Start of Infinite Scale
